# openhost-stalwart-email-server

./: .gitignore  Caddyfile  Caddyfile.template  Dockerfile  README.md  entrypoint.sh  openhost.toml  owner-login.html  stalwart.toml
jmap_proxy/: pyproject.toml
jmap_proxy/src/jmap_proxy/: main.py
services/jmap/: README.md  openhost_service.toml
