[project]
name = "jmap-proxy"
version = "0.1.0"
description = "OpenHost permission gate + reverse proxy for the Stalwart JMAP interface"
requires-python = ">=3.11"
dependencies = [
    "litestar>=2.10,<3",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmap_proxy"]
